Closed Bug 496689 Opened 17 years ago Closed 17 years ago

Close all windows with one multitab window might not give warning

Categories

(Camino Graveyard :: General, defect)

All
macOS
defect
Not set
minor

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: ishermandom+bugs, Assigned: ishermandom+bugs)

Details

Attachments

(1 file)

1.38 KB, patch
chris
: review+
stuart.morgan+bugzilla
: superreview+
Details | Diff | Splinter Review
Attached patch PatchSplinter Review
As noted by hendy in bug 493349: > Testing also exposed some buggy behaviour in our close-all-windows. If a popup > window (or even Downloads) is frontmost, with a single multitab window behind > it, opt-clicking close (or Cmd+Opt+W) will close both windows without > confirmation. This behaviour should be fixed, by making |closeAllWindows| get > the frontmost browser window's controller, rather than the main window's > controller.
Attachment #381909 - Flags: superreview?(stuart.morgan+bugzilla)
Attachment #381909 - Flags: review?(trendyhendy2000)
Attachment #381909 - Flags: review?(trendyhendy2000) → review+
Comment on attachment 381909 [details] [diff] [review] Patch Looks good.
Attachment #381909 - Flags: superreview?(stuart.morgan+bugzilla) → superreview+
Comment on attachment 381909 [details] [diff] [review] Patch sr=smorgan
Status: NEW → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: