Bug 496689 - Closing all windows with one multitab window might not give warning. Patch by Ilya Sherman <ishermandom+bugs@gmail.com>, r=hendy, sr=smorgan